Correct alignment in navbar for submenu

--- a/src/App.css
+++ b/src/App.css
@@ -21,7 +21,7 @@ nav {
   padding: 0px;
   position: absolute;
   top: 6.5rem;
-  margin-left: 1rem;
+  margin-left: 1.5rem;
   font-size: 14pt;
   transition: 0.3s;
   visibility: hidden;
